# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: information.cpp  main.cpp
src/include/: information.h
